# exercises

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: cmake-build.yml
esercizi/: esercizi-command-line.md  strutture-controllo.md
exercises/calculate_pi/: CMakeLists.txt  calculate_pi.cpp
exercises/centralLimitTheorem/: CMakeLists.txt  README.md  clm.cpp  clm_algo.cpp
exercises/centralLimitTheorem/plot/: exec.sh  plot.py
exercises/fibonacci/: CMakeLists.txt  README.md  fibonacci.cpp  fibonacci_iterative.cpp
exercises/find_exponent/: CMakeLists.txt  find_exponent.cpp
exercises/isPerfect/: CMakeLists.txt  README.md  isPerfect.cpp
exercises/isPrime/: CMakeLists.txt  README.md  is_prime.cpp
exercises/kaprekar/: CMakeLists.txt  README.md  kaprekar.cpp
exercises/lcm_gcd/: CMakeLists.txt  README.md  lcm_gcd.cpp
exercises/letterDistance/: CMakeLists.txt  README.md  letterDistance_dist.cpp
exercises/maxAdjProduct/: CMakeLists.txt  README.md  maxAdjProd.cpp  maxAdjProd_algo.cpp
exercises/max_int_in_file/: README.md  file.txt  max_int_in_file.cpp
exercises/minFunctionDistance/: CMakeLists.txt  README.md  minFuncDistance.cpp  minFuncDistance_algo.cpp
exercises/num_to_binary/: CMakeLists.txt  num_to_binary.cpp
exercises/person_class/: CMakeLists.txt  README.md  person_class.cpp
exercises/pow_function/: CMakeLists.txt  pow.cpp
exercises/recursive_count/: CMakeLists.txt  recursive_count.cpp
exercises/removeSpecialCharacters/: CMakeLists.txt  README.md  rmSpecialChars_algo.cpp
exercises/smallest_of_N/: CMakeLists.txt  algo.cpp  main.cpp
exercises/sum_of_N_cubes/: CMakeLists.txt  main.cpp  math.cpp
exercises/templated_recursive_count/: CMakeLists.txt  README.md  templated_recursive_count.cpp
exercises/towerOfHanoi/: CMakeLists.txt  README.md  hanoi  hanoi.cpp
find_exponent/: find_exponent.cpp
find_the_bug/: CMakeLists.txt
find_the_bug/averageGrade/: README.md
find_the_bug/averageGrade/solution/: CMakeLists.txt  calculateAverage.cpp
find_the_bug/factorial/: README.md
find_the_bug/factorial/solution/: CMakeLists.txt  factorial.cpp
find_the_bug/pointDistance/: README.md
find_the_bug/pointDistance/solution/: CMakeLists.txt  pointDistance.cpp
find_the_bug/rectangleArea/: README.md
find_the_bug/rectangleArea/solution/: CMakeLists.txt  rectangleArea.cpp
find_the_bug/sumOfTwoNumbers/: README.md
find_the_bug/sumOfTwoNumbers/solution/: CMakeLists.txt  sumOfTwoNumbers.cpp
find_the_bug/vectorAccumulation/: README.md
find_the_bug/vectorAccumulation/solution/: CMakeLists.txt  vectorAccumulation.cpp
kaprekar/: kaprekar.cpp
person_class/: person_class.cpp
problemi/: CMakeLists.txt
problemi/calculate_pi/: CMakeLists.txt  calculate_pi.cpp
problemi/centralLimitTheorem/: CMakeLists.txt  README.md  clm.cpp  clm_algo.cpp
problemi/centralLimitTheorem/plot/: exec.sh
problemi/error_propagation/: CMakeLists.txt  README.md  propagate_errors.cpp
problemi/fibonacci/: CMakeLists.txt  README.md  fibonacci.cpp  fibonacci_iterative.cpp
problemi/find_exponent/: CMakeLists.txt  README.md  find_exponent.cpp
problemi/isPerfect/: CMakeLists.txt  README.md  isPerfect.cpp
problemi/isPrime/: CMakeLists.txt  is_prime.cpp
problemi/kaprekar/: CMakeLists.txt  README.md  kaprekar.cpp
problemi/lcm_gcd/: CMakeLists.txt  README.md  lcm_gcd.cpp
problemi/letterDistance/: CMakeLists.txt  README.md  letterDistance_dist.cpp
problemi/matrixMultiplication/: CMakeLists.txt  README.md  matrixMultiplication.cpp
problemi/matrixSum/: CMakeLists.txt  README.md  matrixSum.cpp
problemi/matrixTransposition/: CMakeLists.txt  README.md  matrixTranspose.cpp
problemi/maxAdjProduct/: CMakeLists.txt  maxAdjProd.cpp  maxAdjProd_algo.cpp
problemi/minFunctionDistance/: CMakeLists.txt  README.md  minFuncDistance.cpp  minFuncDistance_algo.cpp
problemi/num_to_binary/: CMakeLists.txt  README.md  num_to_binary.cpp
problemi/person_class/: CMakeLists.txt  person_class.cpp
problemi/pow_function/: CMakeLists.txt  pow.cpp
problemi/recursive_count/: CMakeLists.txt  README.md  recursive_count.cpp
problemi/removeSpecialCharacters/: CMakeLists.txt  README.md  rmSpecialChars.cpp  rmSpecialChars_algo.cpp
problemi/scalarProduct/: CMakeLists.txt  README.md  scalarProduct.cpp
problemi/smallest_of_N/: CMakeLists.txt  README.md  algo.cpp
problemi/sum_of_N_cubes/: CMakeLists.txt  README.md  main.cpp  math.cpp
problemi/templated_recursive_count/: CMakeLists.txt  README.md  templated_recursive_count.cpp
problemi/towerOfHanoi/: CMakeLists.txt  README.md  hanoi.cpp
problemi/transposeMatrix/: README.md  matrixTranspose.cpp
problemi/vectorProduct/: CMakeLists.txt  README.md  vectorProduct.cpp
problemi/vectorRotation/: CMakeLists.txt  README.md  vectorRotation.cpp
