set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_BINARY_DIR})

add_subdirectory(isPrime)
add_subdirectory(lcm_gcd)
add_subdirectory(kaprekar)
add_subdirectory(fibonacci)
add_subdirectory(isPerfect)
add_subdirectory(calculate_pi)
add_subdirectory(person_class)
add_subdirectory(pow_function)
add_subdirectory(towerOfHanoi)
add_subdirectory(find_exponent)
add_subdirectory(maxAdjProduct)
add_subdirectory(num_to_binary)
add_subdirectory(smallest_of_N)
add_subdirectory(letterDistance)
add_subdirectory(matrixMultiplication)
add_subdirectory(transposeMatrix)
add_subdirectory(sum_of_N_cubes)
add_subdirectory(recursive_count)
add_subdirectory(centralLimitTheorem)
add_subdirectory(minFunctionDistance)
add_subdirectory(removeSpecialCharacters)
add_subdirectory(templated_recursive_count)

