add_executable(clm.out clm.cpp)
target_include_directories(clm.out PRIVATE ${DOCTEST_INCLUDE_DIR})
add_test(NAME clm.out COMMAND clm.out)
add_executable(clm_algo.out clm_algo.cpp)
target_include_directories(clm_algo.out PRIVATE ${DOCTEST_INCLUDE_DIR})
add_test(NAME clm_algo.out COMMAND clm_algo.out)
