add_executable(fibonacci.out fibonacci.cpp)
target_include_directories(fibonacci.out PRIVATE ${DOCTEST_INCLUDE_DIR})
add_test(NAME fibonacci.out COMMAND fibonacci.out)
add_executable(fibonacci_iterative.out fibonacci_iterative.cpp)
target_include_directories(fibonacci_iterative.out PRIVATE ${DOCTEST_INCLUDE_DIR})
add_test(NAME fibonacci_iterative.out COMMAND fibonacci_iterative.out)
