# add_executable(letterDistance.out letterDistance.cpp)
# add_test(NAME letterDistance.out COMMAND letterDistance.out)
add_executable(letterDistance_dist.out letterDistance_dist.cpp)
target_include_directories(letterDistance_dist.out PRIVATE ${DOCTEST_INCLUDE_DIR})
add_test(NAME letterDistance_dist.out COMMAND letterDistance_dist.out)
